--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" /> <!-- Para leer archivos -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" /> <!-- Para Android 13+ -->
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" /> <!-- Para Android 13+ -->
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" /> <!-- Para Android 13+ -->
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,6 +27,44 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ActividadInicioSesion"
+            android:exported="false" />
+        <activity
+            android:name=".ActividadRegistro"
+            android:exported="false" />
+        <activity
+            android:name=".ActividadPrincipal"
+            android:exported="false"
+            android:label="Feed Principal" />
+        <activity
+            android:name=".ActividadPerfilUsuario"
+            android:exported="false"
+            android:label="Mi Perfil" />
+
+        <activity
+            android:name=".ActividadBusqueda"
+            android:exported="false"
+            android:label="Buscar Compañeros" />
+        <activity
+            android:name=".ActividadCrearGrupo"
+            android:exported="false"
+            android:label="Crear Grupo" />
+        <activity
+            android:name=".ActividadEnviarArchivo"
+            android:exported="false"
+            android:label="Enviar Archivo" />
+
+        <!-- Servicio para Notificaciones Push (FCM) -->
+        <service
+            android:name=".MiServicioDeMensajeria"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+
     </application>
 
 </manifest>
