--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
         <activity
@@ -57,7 +58,7 @@
 
         <!-- Servicio para Notificaciones Push (FCM) -->
         <service
-            android:name=".MiServicioDeMensajeria"
+            android:name=".ServicioDeMensajeria"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
