--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" /> <!-- Para leer archivos -->
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" /> <!-- Para Android 13+ -->
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" /> <!-- Para Android 13+ -->
-    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" /> <!-- Para Android 13+ -->
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -60,7 +60,6 @@
             android:exported="false"
             android:label="Detalle Grupo"/>
 
-        <!-- Servicio para Notificaciones Push (FCM) -->
         <service
             android:name=".ServicioDeMensajeria"
             android:exported="false">
