Avance 12 - 24/11/2025 Añadio la funcion de anadir miembro a un grupo pero que solo lo puede hacer el administrador, y que solo puede anadir a los contacto que tiene agregado.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,11 @@
             android:exported="false"
             android:label="Detalle Grupo"/>
 
+        <activity
+            android:name=".ActividadAnadirMiembros"
+            android:exported="false"
+            android:label="Anadir Miembros"/>
+
         <service
             android:name=".ServicioDeMensajeria"
             android:exported="false">
